cmake_minimum_required(VERSION 3.25)
project(DSAndOS)

set(CMAKE_CXX_STANDARD 17)

add_executable(DSAndOS DSBySelf/2.1.cpp DSBySelf/2.1.cpp DSBySelf/main.cpp DSBookCode/数据结构第2版-书中算法（C语言版）/第2章/2.1-2.5/2.1-2.5.cpp)
add_executable(DSAndOS2 DSBySelf/2.1.cpp DSBySelf/2.1.cpp DSBySelf/2.1.cpp DSBookCode/数据结构第2版-书中算法（C语言版）/第2章/2.1-2.5/2.1-2.5.cpp)
